--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,121 @@
+@font-face {
+  font-family: RobotoCondensedRegular;
+  src: url(../fonts/RobotoCondensed-Regular.ttf);
+}
+@font-face {
+  font-family: RobotoCondensedBold;
+  src: url(../fonts/RobotoCondensed-Bold.ttf);
+}
 
+:root {
+  --highlight-color: rgb(20, 47, 66);
+  --lighter-color: rgb(185, 226, 255);
+  --bg-color: rgb(226, 243, 255);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "RobotoCondensedRegular";
+}
+
+html {
+  font-size: 62.5%;
+}
+
+main {
+  height: 120vh;
+  background-color: var(--bg-color);
+  padding: 3rem 0 0 0;
+}
+
+h1 {
+  font-size: 3rem;
+  color: var(--highlight-color);
+  margin: 0 0 2rem 0;
+}
+
+h2 {
+  font-size: 2rem;
+  padding: 1rem 0 1rem 2rem;
+}
+
+h3 {
+  font-family: "RobotoCondensedBold";
+  font-size: 2rem;
+}
+
+p,
+label,
+input {
+  font-size: 2rem;
+  margin: 0 0 1rem 0;
+}
+
+section {
+  width: 45vw;
+  margin: 0 auto;
+}
+
+div {
+  width: 100%;
+  background-color: var(--lighter-color);
+  padding: 2rem;
+  margin: 0 0 1rem 0;
+}
+div:nth-of-type(1) {
+  border-radius: 10px 10px 0 0;
+}
+div:nth-of-type(3),
+article div:nth-of-type(2) {
+  border-radius: 0 0 10px 10px;
+}
+
+form,
+article {
+  background-color: white;
+  border: 3px solid var(--highlight-color);
+  padding: 0.8rem;
+}
+
+form {
+  border-radius: 10px 10px 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+article {
+  border-top: none;
+  border-radius: 0 0 10px 10px;
+}
+
+label[for="aufschlagen"],
+label[for="abziehen"] {
+  margin: 0 0 0 1rem;
+}
+
+label[for="neunzehn-prozent"],
+label[for="sieben-prozent"] {
+  margin: 0 3rem 0 1rem;
+}
+
+input[type="number"] {
+  height: 4rem;
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  padding: 1rem;
+}
+
+input[type="submit"] {
+  height: 5rem;
+  width: 100%;
+  background-color: var(--highlight-color);
+  border: none;
+  border-radius: 10px;
+  letter-spacing: 0.1rem;
+  color: white;
+  margin: 1rem 0 1rem 0;
+}
